<resources>
    <string name="app_name">PhotoPlaces</string>
    <string name="address_text">Address</string>
    <string name="distance_text">Distance</string>
    <string name="add_place">Add new place</string>
    <string name="unknown_text">unknown</string>
    <string name="no_internet_text">No internet connection. Please check your device connection settings.</string>
    <string name="activate_location_text">Please activate location from settings.</string>
    <string name="latitude_and_longitude_text">Latitude and Longitude</string>
    <string name="location">%1$s, %2$s</string>
    <string name="longitude_text">Longitude</string>
    <string name="latitude_text">Latitude</string>
    <string name="image_url_text">Image url</string>
    <string name="label_text">Label</string>
    <string name="save_button_text">Save</string>
    <string name="failed_to_save_text">Failed to save</string>
    <string name="latitude_range_text">Latitudes range from -90 to 90</string>
    <string name="longitude_range_text">Longitudes range from -180 to 80</string>
    <string name="directions_text">Directions</string>


</resources>